[project]
name = "meal-planner"
version = "0.1.0"
description = "AI meal planner"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "kagglehub",
  "langchain-ollama",
  "langgraph",
  "pandas",
  "pgvector",
  "psycopg[binary]",
  "pydantic",
  "python-dotenv",
  "tqdm",
  "typer",
]
